--- a/index.html
+++ b/index.html
@@ -70,8 +70,16 @@
           <p>I have been a curriculum writing Intern at Team Everest Ngo</p>
         </div>
         <div class="experience-item">
+          <h2>Open Source Contributor</h2>
+          <p>I was selected as the open-source contributor in Girlscript Winter Of Contributing (GWOC).</p>
+        </div>
+        <div class="experience-item">
           <h2>Web Developer Intern</h2>
-          <p>I have recently joined Lets Grow More VIP program as web developer Intern.</p>
+          <p> I had been selected as Web Developer Intern at Let’s Grow More.</p>
+        </div>
+         <div class="experience-item">
+          <h2>Open Source Contributor</h2>
+          <p>Currently working as an open-source contributor in Girlscript Summer Of Code (GSSOC).</p>
         </div>
       </div>
     </div>
@@ -135,7 +143,7 @@
         <p>Hello, My name is Vanshika Agarwal. I am a second year CSE student. I am a highly creative , self - motivated , goal-
            oriented and flexible person. Looking for opportunity to incorporate my skills and explore new areas of work that will contribute to my professional and personal 
            growth and can be a great kickstart for my career and help me realize my potential and perspective.</p>
-        <a href="https://drive.google.com/file/d/1e_Zwj9EfFQwEjlp5lgHrqrcCka6k6XhL/view?usp=sharing" class="cta" download>Download Resume</a>
+        <a href="https://drive.google.com/file/d/1LwS9D5tlwzEd_FwDAZ-ciWNXlZfb9P0l/view?usp=sharing" class="cta" download>Download Resume</a>
       </div>
     </div>
   </section>
