--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <p> I had been selected as Web Developer Intern at Let’s Grow More.</p>
         </div>
          <div class="experience-item">
-          <h2>Open Source Contributor</h2>
-          <p>Currently working as an open-source contributor in Girlscript Summer Of Code (GSSOC).</p>
+          <h2>Miceosoft Future Ready Internship</h2>
+          <p>Recently completed my internship wherein I developed a website and integrated azure features to it.Worked on azure technologies and deployed the project using azure static web services. Also added azure qna-maker into my project </p>
         </div>
       </div>
     </div>
