--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
          <div class="experience-item">
           <h2>Miceosoft Future Ready Internship</h2>
-          <p>Recently completed my internship wherein I developed a website and integrated azure features to it.Worked on azure technologies and deployed the project using azure static web services. Also added azure qna-maker into my project </p>
+          <p>Recently completed my internship wherein I developed a website and integrated azure features to it.</p>
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
         <p>Hello, My name is Vanshika Agarwal. I am a second year CSE student. I am a highly creative , self - motivated , goal-
            oriented and flexible person. Looking for opportunity to incorporate my skills and explore new areas of work that will contribute to my professional and personal 
            growth and can be a great kickstart for my career and help me realize my potential and perspective.</p>
-        <a href="https://drive.google.com/file/d/1LwS9D5tlwzEd_FwDAZ-ciWNXlZfb9P0l/view?usp=sharing" class="cta" download>Download Resume</a>
+        <a href="https://drive.google.com/file/d/1ZBk4Zt-zZPsyNCeLdeyt55ZkWYiYLL-u/view?usp=sharing" class="cta" download>Download Resume</a>
       </div>
     </div>
   </section>
